--- a/diapos/AnalisisDatosProduccion.tex
+++ b/diapos/AnalisisDatosProduccion.tex
@@ -1,4 +1,4 @@
-% Created 2023-03-23 jue 14:27
+% Created 2024-04-18 jue 12:40
 % Intended LaTeX compiler: pdflatex
 \documentclass[aspectratio=169, usenames,svgnames,dvipsnames]{beamer}
 \usepackage[utf8]{inputenc}
@@ -56,13 +56,13 @@
  pdftitle={Análisis de datos de producción},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 28.2 (Org mode 9.6)}, 
+ pdfcreator={Emacs 29.2 (Org mode 9.6.23)}, 
  pdflang={Spanish}}
 \begin{document}
 
 \maketitle
 
-\begin{frame}[label={sec:org1f71de3}]{Planteamiento}
+\begin{frame}[label={sec:org9b7a584}]{Planteamiento}
 \begin{itemize}
 \item La \alert{energía producida por un SFV} durante un período puede ser \alert{estimada} a partir de la \alert{radiación incidente} y de las \alert{características técnicas} del sistema.
 \item Teniendo en cuenta el carácter estocástico de la radiación solar, la estimación de la energía que producirá un SFV durante los próximos años es un ejercicio de \alert{predicción con incertidumbre} asociada.
@@ -72,10 +72,10 @@
 \end{frame}
 
 \section{Estadística}
-\label{sec:org8523c80}
+\label{sec:orge5a1996}
 
 
-\begin{frame}[label={sec:orgaa2c580}]{Variable aleatoria y proceso estocástico}
+\begin{frame}[label={sec:orgdf27e0d}]{Variable aleatoria y proceso estocástico}
 \begin{itemize}
 \item Una \alert{variable aleatoria} es una función que asigna un único numero
 real a cada resultado de un espacio muestral en un experimento.
@@ -85,7 +85,7 @@ lo largo del \alert{tiempo} (p.ej. la radiación).
 \end{frame}
 
 
-\begin{frame}[label={sec:org067c309}]{Función de densidad de probabilidad}
+\begin{frame}[label={sec:orgb6ce10c}]{Función de densidad de probabilidad}
 La función de densidad de probabilidad, \(f(X)\), de una variable
 aleatoria \alert{asigna probabilidad} a un suceso:
 
@@ -114,7 +114,7 @@ P(X>a)=\int_{a}^{\infty}f(x)dx\]
 \end{frame}
 
 
-\begin{frame}[label={sec:org5f2e18f}]{Media, varianza y desviación estándar}
+\begin{frame}[label={sec:orgc3b97a7}]{Media, varianza y desviación estándar}
 \begin{itemize}
 \item La \alert{media} de una variable aleatoria es el \alert{centro de masas} de su función densidad de probabilidad:
 \end{itemize}
@@ -138,7 +138,7 @@ P(X>a)=\int_{a}^{\infty}f(x)dx\]
 
 
 
-\begin{frame}[label={sec:org4dfcfb7}]{Combinación lineal de variables aleatorias}
+\begin{frame}[label={sec:org9203e09}]{Combinación lineal de variables aleatorias}
 \begin{itemize}
 \item La \alert{media de la suma} de varias variables aleatorias \alert{independientes} es
 la suma de las medias:
@@ -159,7 +159,7 @@ la suma de las medias:
 
 
 
-\begin{frame}[label={sec:org9501263}]{Media y varianza de la media muestral}
+\begin{frame}[label={sec:org0695a47}]{Media y varianza de la media muestral}
 \begin{itemize}
 \item Una \alert{muestra de una población} es un conjunto de variables
 aleatorias independientes (\(X_{1}...X_{n}\)).
@@ -169,20 +169,20 @@ variable aleatoria (que es una suma de variables aleatorias)
 \end{itemize}
 
 \[
-\overline{X}=\frac{1}{i=n}\sum_{n}X_{i}
+\overline{X}=\frac{1}{n}\sum_{i=n}X_{i}
 \]
 \end{frame}
 
 
 
-\begin{frame}[label={sec:org57bc476}]{Media y varianza de la media muestral}
+\begin{frame}[label={sec:org01bdd31}]{Media y varianza de la media muestral}
 Sea una población cuya media es \(\mu\) y su varianza es \(\sigma^{2}\):
 
 \begin{itemize}
 \item La \alert{media de la media muestral} es la media poblacional:
 \end{itemize}
 \[
-\mu_{\overline{X}}=\frac{1}{i = n}\sum_{n}\mu_{X_{i}} = \mu
+\mu_{\overline{X}}=\frac{1}{n}\sum_{i = n}\mu_{X_{i}} = \mu
 \]
 
 \begin{itemize}
@@ -201,7 +201,9 @@ Por tanto, una forma de \alert{reducir la incertidumbre} es realizar la
 
 
 
-\begin{frame}[label={sec:orge2afb6a}]{Mediana y cuartiles}
+\begin{frame}[label={sec:org0998b66}]{Mediana y cuartiles}
+\begin{columns}
+\begin{column}{0.5\columnwidth}
 \begin{itemize}
 \item La \alert{mediana} divide el conjunto de valores de la variable en \alert{dos
 mitades} iguales (divide el area encerrada por la función densidad
@@ -212,120 +214,187 @@ de probabilidad en dos partes iguales).
 \item La \alert{distancia intercuartil} (definida entre los cuartiles 1 y 3) es
 una \alert{medida de la dispersión} de la variable.
 \end{itemize}
+\end{column}
+
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[height=0.9\textheight]{../figs/cuantiles.pdf}
+\end{center}
+\end{column}
+\end{columns}
 \end{frame}
 
-
 \section{Gráficos estadísticos}
-\label{sec:orgd1e6144}
+\label{sec:orgb15c4a6}
 
 
-\begin{frame}[label={sec:orgbe23b9b}]{Función de Densidad de Probabilidad}
+\begin{frame}[label={sec:orga6ba832}]{Función de Densidad de Probabilidad}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/FuncionDensidadProbabilidad.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orged9c788}]{Histograma}
+\begin{frame}[label={sec:org9c8bf09}]{Histograma}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/Histograma.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org5cc1719}]{Gráficos boxplot}
+\begin{frame}[label={sec:orgbc984d9}]{Gráficos boxplot}
+\begin{columns}
+\begin{column}{0.5\columnwidth}
+\begin{itemize}
+\item Línea central: mediana (Q2).
+\item Límites de la caja: cuantiles Q1 y Q2 (IQR)
+\item Bigotes: valores máximo y mínimo o 1.5·IQR.
+\item Puntos: valores anómalos (\emph{outliers}).
+\end{itemize}
+\end{column}
+
+\begin{column}{0.5\columnwidth}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/GraficoBoxplot.pdf}
 \end{center}
+\end{column}
+\end{columns}
 \end{frame}
 
-
-\begin{frame}[label={sec:org3becdb1}]{Gráficos de dispersión}
+\begin{frame}[label={sec:orgc96a3f9}]{Gráficos de dispersión}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/GraficoDispersion.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org2f87a76}]{Matrices de gráficos de dispersión}
+\begin{frame}[label={sec:org4913886}]{Matrices de gráficos de dispersión}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/Splom.png}
 \end{center}
 \end{frame}
 
 \section{Gráficos Fotovoltaicos}
-\label{sec:org95a13f6}
+\label{sec:org5fc9725}
 
-\begin{frame}[label={sec:org89d3687}]{Inventario\footnote{Más ejemplos en el informe \guillemotleft{}\href{https://iea-pvps.org/key-topics/analytical-monitoring-of-pv-systems-final/}{Analytical Monitoring of Grid-connected Photovoltaic Systems}\guillemotright{} de la Task 13 del IEA-PVPS.}}
+\begin{frame}[label={sec:org305351d}]{Inventario\footnote{Más ejemplos en el informe \guillemotleft{}\href{https://iea-pvps.org/key-topics/analytical-monitoring-of-pv-systems-final/}{Analytical Monitoring of Grid-connected Photovoltaic Systems}\guillemotright{} de la Task 13 del IEA-PVPS.}}
 \begin{itemize}
-\item \(Y_f \sim Y_r\) (valores diarios e intradiarios)
+\item \(Y_f \sim Y_r\) 
 
-Relación lineal creciente. Detección de sombreado, defectos en cableado DC y AC, fallos o limitación del inversor.
+Detección de sombreado, defectos en cableado DC y AC, fallos o limitación del inversor.
 
-\item \(Y_a \sim Y_r\) (valores diarios e intradiarios)
+\item \(Y_a \sim Y_r\)
 
-Relación lineal creciente. Detección de sombreado o defectos en cableado DC.
+Detección de sombreado o defectos en cableado DC.
 
-\item \(pr \sim T_c\)  (valores intradiarios)
+\item \(pr \sim T_c\) 
 
-Relación lineal decreciente. Detección de sombreado, degradación, o puntos calientes.
+Detección de sombreado, degradación, o puntos calientes.
 
-\item \((T_c - T_a) \sim y_r\) (valores intradiarios)
+\item \((T_c - T_a) \sim y_r\)
 
-Relación lineal creciente. Detección de problemas de disipación de calor.
+Detección de problemas de disipación de calor.
 
-\item \(V_G \sim T_c\) (valores intradiarios)
+\item \(V_G \sim T_c\)
 
-Relación lineal decreciente. Detección de problemas en el MPPT, limitación del inversor, diodos de bypass.
+Detección de problemas en el MPPT, limitación del inversor, diodos de bypass.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgf4ad1cf}]{\(Y_f \sim Y_r\)}
+\begin{frame}[label={sec:orge252cec}]{\(Y_f \sim Y_r\)}
+\begin{columns}
+\begin{column}{0.3\columnwidth}
+\begin{itemize}
+\item Valores diarios e intradiarios.
+\item Relación lineal creciente.
+\item Detección de sombreado, defectos en cableado DC y AC, fallos o limitación del inversor.
+\end{itemize}
+\end{column}
+
+\begin{column}{0.7\columnwidth}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/YfYr.pdf}
 \end{center}
+\end{column}
+\end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgb4a2799}]{Error de funcionamiento \(Y_f \sim Y_r\)}
+\begin{frame}[label={sec:org9c8f6e2}]{Error de funcionamiento \(Y_f \sim Y_r\)}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ErrorYf.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgf619acb}]{\(Y_a \sim Y_r\)}
+\begin{frame}[label={sec:org0c94095}]{\(Y_a \sim Y_r\)}
+\begin{columns}
+\begin{column}{0.3\columnwidth}
+\begin{itemize}
+\item Valores diarios e intradiarios.
+\item Relación lineal creciente.
+\item Detección de sombreado o defectos en cableado DC.
+\end{itemize}
+\end{column}
+
+\begin{column}{0.7\columnwidth}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/YaYr.pdf}
 \end{center}
+\end{column}
+\end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orga880a44}]{Error de funcionamiento \(Y_a \sim Y_r\)}
+\begin{frame}[label={sec:org26dce0c}]{Error de funcionamiento \(Y_a \sim Y_r\)}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ErrorMonitorizacion.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org6f50382}]{\(pr \sim T_c\)}
+\begin{frame}[label={sec:orgfbedb63}]{\(pr \sim T_c\)}
+\begin{columns}
+\begin{column}{0.3\columnwidth}
+\begin{itemize}
+\item Valores intradiarios.
+\item Relación lineal decreciente.
+\item Detección de sombreado, degradación, o puntos calientes.
+\end{itemize}
+\end{column}
+
+\begin{column}{0.7\columnwidth}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/prTc.pdf}
 \end{center}
+\end{column}
+\end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org691aedd}]{\(V_g \sim T_c\)}
+\begin{frame}[label={sec:org6117dae}]{\(V_g \sim T_c\)}
+\begin{columns}
+\begin{column}{0.3\columnwidth}
+\begin{itemize}
+\item Valores intradiarios.
+\item Relación lineal decreciente.
+\item Detección de problemas en el MPPT, limitación del inversor, diodos de bypass.
+\end{itemize}
+\end{column}
+
+\begin{column}{0.7\columnwidth}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/VgTc.pdf}
 \end{center}
+\end{column}
+\end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org50da541}]{Error de funcionamiento \(V_g \sim T_c\)}
+\begin{frame}[label={sec:org24ca23e}]{Error de funcionamiento \(V_g \sim T_c\)}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ErrorVgTc.pdf}
 \end{center}
 \end{frame}
 
 \section{Comparación entre Datos y Estimación}
-\label{sec:org7f0010a}
+\label{sec:orgd4151dd}
 
-\begin{frame}[label={sec:org844d624}]{Desviación entre modelo y observación}
+\begin{frame}[label={sec:orgfb93a04}]{Desviación entre modelo y observación}
 \begin{itemize}
 \item Sea \(O\) el conjunto de observaciones (medidas) de una variable aleatoria.
 \end{itemize}
@@ -350,7 +419,7 @@ Relación lineal decreciente. Detección de problemas en el MPPT, limitación de
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org5ead824}]{Exactitud (\emph{bias}) y Precisión (\emph{variance})}
+\begin{frame}[label={sec:org43a2dc3}]{Exactitud (\emph{bias}) y Precisión (\emph{variance})}
 \begin{center}
 \includegraphics[height=0.8\textheight]{../figs/bias-variance.png}
 \end{center}
@@ -358,7 +427,7 @@ Relación lineal decreciente. Detección de problemas en el MPPT, limitación de
 \url{http://scott.fortmann-roe.com/docs/BiasVariance.html}
 \end{frame}
 
-\begin{frame}[label={sec:org79d5147}]{Estimadores frecuentes: MBD y RMSD}
+\begin{frame}[label={sec:orgdec4dc1}]{Estimadores frecuentes: MBD y RMSD}
 \begin{itemize}
 \item Mean Bias Difference (MBD), diferencia media (indica si el modelo sobreestima o subestima):
 \end{itemize}
@@ -374,7 +443,7 @@ RMSD = \left(\frac{1}{n} \sum_{i=1}^n d_i^2 \right)^{1/2} =  \left( \frac{1}{n} 
 \]
 \end{frame}
 
-\begin{frame}[label={sec:orge283337}]{Estimadores frecuentes: MBE y RMSD}
+\begin{frame}[label={sec:org4d74768}]{Estimadores frecuentes: MBE y RMSD}
 El RMSD agrega información del promedio y la varianza de la
   diferencia:
 \[
@@ -388,7 +457,7 @@ donde la varianza de la diferencia (unbiased RMSD) se calcula:
 \end{frame}
 
 
-\begin{frame}[label={sec:org419959d}]{Otros estimadores: MAD}
+\begin{frame}[label={sec:org5eb0de7}]{Otros estimadores: MAD}
 \begin{itemize}
 \item Mean Absolute Deviation (MAD):
 \end{itemize}
@@ -397,48 +466,16 @@ donde la varianza de la diferencia (unbiased RMSD) se calcula:
 MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \left|m_i - o_i\right|
 \]
 \begin{itemize}
-\item El RMSD no es robusto (un error puntual puede distorsionar el estimador) y depende del número de muestras:
+\item El RMSD no es robusto (un error puntual puede distorsionar el estimador) y depende del número de muestras\footnote{\url{https://www.int-res.com/abstracts/cr/v30/n1/p79-82/}
+
+\url{https://doi.org/10.1016/j.atmosenv.2008.10.005}}:
 \end{itemize}
 \[
 MAD \leq RMSD \leq n^{1/2} MAD
 \]
-
-\nocite{Willmott.Matsuura.ea2009, Willmott.Matsuura2005a}
 \end{frame}
 
-\begin{frame}[label={sec:orgb46e4ac}]{Otros estimadores: t y d}
-\begin{itemize}
-\item t de Student (valores pequeños indican buen comportamiento del modelo)
-\begin{itemize}
-\item Permite añadir intervalos de confianza a las diferencias entre
-modelo y observación
-\end{itemize}
-\end{itemize}
-
-\[
-t = \left ( \frac{(n-1) MBD^2}{RMSD^2 - MBD^2} \right)^{1/2}
-\]
-
-\nocite{Stone1993}
-
-
-\begin{itemize}
-\item \(d_1\): Índice de concordancia de Willmott.
-\begin{itemize}
-\item Limitado entre 0 (ausencia de concordancia) y 1 (concordancia total).
-\item Robusto frente a \emph{outliers}.
-\end{itemize}
-\end{itemize}
-\[
-d_1 = 1 - \frac{\sum_{i=1}^n \left| m_i - o_i \right|}{\sum_{i=1}^n \left(
-  \left| m_i - \overline{\mathbf{O}}\right| + \left| o_i -
-    \overline{\mathbf{O}} \right| \right)}
-\]
-
-\nocite{Willmott.Robeson.ea2012}
-\end{frame}
-
-\begin{frame}[label={sec:org5955178}]{Correlación}
+\begin{frame}[label={sec:orgebf4c8b}]{Correlación}
 El coeficiente de correlación entre dos conjuntos de datos es una
 medida numérica de la relación \alert{lineal} entre los dos conjuntos (si la
 relación no es lineal, este coeficiente no sirve):
@@ -459,74 +496,26 @@ r = \frac{1}{n-1} \cdot \sum_{i=1}^{n} \left( \frac{o_{i}-\overline{\mathbf{O}}}
 \end{frame}
 
 
-\begin{frame}[label={sec:org567f99f}]{Diagramas de Taylor}
-\begin{itemize}
-\item Desarrollando \(\sigma^2_{\mathbf{D}}\) y teniendo en cuenta la definición de \(r\):
-\end{itemize}
-
-  \[
-  \sigma^2_{\mathbf{D}} = \sigma^2_{\mathbf{O}}  + \sigma^2_{\mathbf{M}}
-- 2 \cdot \sigma_{\mathbf{O}} \cdot \sigma_{\mathbf{M}} \cdot r
-  \]
-\begin{itemize}
-\item Esta relación es semejante a la ley de los cosenos (\(c\), \(a\), \(b\) son lados de un triángulo y \(\phi\) es el ángulo opuesto al lado \(c\)):
-\end{itemize}
-
-\[
-c^2 = a^2 + b^2 - 2 \cdot a \cdot b \cos\phi
-\]
-\nocite{Taylor2000}
-\end{frame}
-
-\begin{frame}[label={sec:orgdf94e2a}]{Diagramas de Taylor}
-\[
-\sigma^2_{\mathbf{D}} = \sigma^2_{\mathbf{O}}  + \sigma^2_{\mathbf{M}}
-- 2 \cdot \sigma_{\mathbf{O}} \cdot \sigma_{\mathbf{M}} \cdot r 
-\]
-
-\begin{columns}
-\begin{column}{0.4\columnwidth}
-\begin{itemize}
-\item \(\sigma^2_{\mathbf{D}}\): Distancia al origen
-\item \(\sigma^2_{\mathbf{O}}\): Eje horizontal
-\item \(\sigma^2_{\mathbf{M}}\): Eje vertical
-\item \(r\): acimut
-\end{itemize}
-\end{column}
-
-\begin{column}{0.7\columnwidth}
-\begin{center}
-\includegraphics[height=0.8\textheight]{../figs/TaylorDiagrama.png}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-
-
-\begin{frame}[label={sec:org7eb7695}]{Target Diagram}
+\begin{frame}[label={sec:orge00ad08}]{Target Diagram\footnote{\url{https://doi.org/10.1016/j.jmarsys.2008.05.014}}}
 \begin{itemize}
 \item Emplea la relación entre \(RMSD\), \(\sigma^2_{\mathbf{D}}\), y \(\overline{\mathbf{D}}\), normalizadas con \(\sigma_{\mathbf{O}}\):
 \end{itemize}
-\[
-RMSD' = RMSD / \sigma_{\mathbf{O}}
-\]
-
+  \[
+  RMSD' = RMSD / \sigma_{\mathbf{O}}
+  \]
 \[
   \sigma'_{\mathbf{D}} = \sigma_{\mathbf{D}} / \sigma_{\mathbf{O}} 
 \]
-
 \[
 \overline{\mathbf{D}}' = \overline{\mathbf{D}} / \sigma_{\mathbf{O}}
 \]
-
 \[
 RMSD'^2= \sigma'^2_{\mathbf{D}} + \overline{\mathbf{D}}'^2
 \]
 
 \begin{itemize}
-\item Incorporan el signo de la diferencia entre desviaciones estándar del modelo y las observaciones.
+\item Incorpora el signo de la diferencia entre desviaciones estándar del modelo y las observaciones.
 \end{itemize}
-
 \[
 sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
 \]
@@ -535,9 +524,9 @@ sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
 \nocite{Jolliff.Kindle.ea2009}
 \end{frame}
 
-\begin{frame}[label={sec:orgd79527a}]{Target Diagram}
+\begin{frame}[label={sec:orgde620d3}]{Target Diagram}
 \begin{columns}
-\begin{column}{0.3\columnwidth}
+\begin{column}{0.4\columnwidth}
 \begin{itemize}
 \item \(\sigma'_{\mathbf{D}}\) (con signo): Eje horizontal
 \item \(\overline{\mathbf{D}}'\): Eje vertical
@@ -545,7 +534,7 @@ sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
 \end{itemize}
 \end{column}
 
-\begin{column}{0.7\columnwidth}
+\begin{column}{0.6\columnwidth}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/TargetDiagram.pdf}
 \end{center}
@@ -555,9 +544,9 @@ sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
 
 
 \section{Coherencia Estadística}
-\label{sec:org42bcc72}
+\label{sec:org0964a6c}
 
-\begin{frame}[label={sec:orga46f0a5}]{Planteamiento}
+\begin{frame}[label={sec:org5e3e5d4}]{Planteamiento}
 \begin{itemize}
 \item En un sistema compuesto por diferentes \alert{unidades idénticas}, el funcionamiento de todas ellas debe ser el mismo.
 \item Los \alert{elementos reales} presentan \alert{diferencias} (tolerancia de potencia, pérdidas de dispersión, suciedad), de forma que el comportamiento de cada unidad se desviará del comportamiento promedio.
@@ -565,7 +554,7 @@ sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
 \item Un análisis estadístico del funcionamiento del conjunto puede \alert{identificar una unidad defectuosa} como aquella que se aparta significativamente del comportamiento promedio.
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org5e8b9c8}]{Coherencia estadística}
+\begin{frame}[label={sec:orge2a803f}]{Coherencia estadística}
 \begin{itemize}
 \item Una medida puede ser etiquetada como \emph{outlier} si es poco probable que pertenezca a la misma distribución que el conjunto.
 \item En estadística hay métodos diversos para realizar este análisis:
@@ -579,7 +568,7 @@ sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
 \end{frame}
 
 
-\begin{frame}[label={sec:org3f904b6}]{Método de Chauvenet}
+\begin{frame}[label={sec:org456a4c5}]{Método de Chauvenet}
 Una medida es un \emph{outlier} si la probabilidad de obtener su desviación
 respecto de la media es inferior al inverso de 2 veces el número de
 elementos en el conjunto.
@@ -588,7 +577,7 @@ elementos en el conjunto.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org98256a3}]{Método de Chauvenet}
+\begin{frame}[label={sec:orgf510d1b}]{Método de Chauvenet\footnote{\url{https://doi.org/10.1016/j.solener.2009.08.008}}}
 \begin{enumerate}
 \item Supongamos un SFV compuesto por \(N\) unidades idénticas.
 \item Sea \(Y_{f,i}\) la medida de \alert{productividad diaria} de una de esas unidades.
@@ -602,11 +591,10 @@ equivalente a la probabilidad límite de Chauvenet, \(1/2N\), teniendo en cuenta
 que hay dos colas.
 \item Aquellas observaciones que superan la distancia son \alert{marcadas como outliers}.
 \end{enumerate}
-
-\nocite{Perpinan2009}
 \end{frame}
 
-\begin{frame}[label={sec:org76f4103}]{Método de Chauvenet}
+
+\begin{frame}[label={sec:orgbecf038}]{Método de Chauvenet}
 \begin{itemize}
 \item Por ejemplo, para un sistema de 10 unidades, la probabilidad es \(1/20\).
 
@@ -637,11 +625,13 @@ que hay dos colas.
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgf6aec8b}]{Métodos gráficos}
+\begin{frame}[label={sec:org06db2ae}]{Métodos gráficos}
 \begin{itemize}
 \item Sea \(Y_{f,i}(t)\) la serie temporal de la productividad diaria de \alert{una unidad} del SFV.
 \item Sea \(\widetilde{Y}_{f}(t)\) la serie temporal de la \alert{mediana} de la productividad diaria del SFV \alert{completo}.
-\item Tomando \(\widetilde{Y}_{f}(t)\) como modelo o referencia, podemos emplear los diagramas de Taylor y Target para detectar unidades defectuosas durante períodos de tiempo.
+\item Tomando \(\widetilde{Y}_{f}(t)\) como modelo o referencia, podemos
+emplear diagramas para detectar unidades defectuosas durante diferentes
+períodos de tiempo.
 \end{itemize}
 
 \begin{center}
