--- a/diapos/AnalisisDatosProduccion.tex
+++ b/diapos/AnalisisDatosProduccion.tex
@@ -1,4 +1,4 @@
-% Created 2024-04-18 jue 12:40
+% Created 2024-04-22 lun 18:22
 % Intended LaTeX compiler: pdflatex
 \documentclass[aspectratio=169, usenames,svgnames,dvipsnames]{beamer}
 \usepackage[utf8]{inputenc}
@@ -62,7 +62,7 @@
 
 \maketitle
 
-\begin{frame}[label={sec:org9b7a584}]{Planteamiento}
+\begin{frame}[label={sec:org67ee9b7}]{Planteamiento}
 \begin{itemize}
 \item La \alert{energía producida por un SFV} durante un período puede ser \alert{estimada} a partir de la \alert{radiación incidente} y de las \alert{características técnicas} del sistema.
 \item Teniendo en cuenta el carácter estocástico de la radiación solar, la estimación de la energía que producirá un SFV durante los próximos años es un ejercicio de \alert{predicción con incertidumbre} asociada.
@@ -72,10 +72,10 @@
 \end{frame}
 
 \section{Estadística}
-\label{sec:orge5a1996}
+\label{sec:org27eca0c}
 
 
-\begin{frame}[label={sec:orgdf27e0d}]{Variable aleatoria y proceso estocástico}
+\begin{frame}[label={sec:org8a74808}]{Variable aleatoria y proceso estocástico}
 \begin{itemize}
 \item Una \alert{variable aleatoria} es una función que asigna un único numero
 real a cada resultado de un espacio muestral en un experimento.
@@ -85,7 +85,7 @@ lo largo del \alert{tiempo} (p.ej. la radiación).
 \end{frame}
 
 
-\begin{frame}[label={sec:orgb6ce10c}]{Función de densidad de probabilidad}
+\begin{frame}[label={sec:org24b3f53}]{Función de densidad de probabilidad}
 La función de densidad de probabilidad, \(f(X)\), de una variable
 aleatoria \alert{asigna probabilidad} a un suceso:
 
@@ -114,7 +114,7 @@ P(X>a)=\int_{a}^{\infty}f(x)dx\]
 \end{frame}
 
 
-\begin{frame}[label={sec:orgc3b97a7}]{Media, varianza y desviación estándar}
+\begin{frame}[label={sec:org3ca4441}]{Media, varianza y desviación estándar}
 \begin{itemize}
 \item La \alert{media} de una variable aleatoria es el \alert{centro de masas} de su función densidad de probabilidad:
 \end{itemize}
@@ -138,7 +138,7 @@ P(X>a)=\int_{a}^{\infty}f(x)dx\]
 
 
 
-\begin{frame}[label={sec:org9203e09}]{Combinación lineal de variables aleatorias}
+\begin{frame}[label={sec:org675d2d7}]{Combinación lineal de variables aleatorias}
 \begin{itemize}
 \item La \alert{media de la suma} de varias variables aleatorias \alert{independientes} es
 la suma de las medias:
@@ -159,7 +159,7 @@ la suma de las medias:
 
 
 
-\begin{frame}[label={sec:org0695a47}]{Media y varianza de la media muestral}
+\begin{frame}[label={sec:orge604e07}]{Media y varianza de la media muestral}
 \begin{itemize}
 \item Una \alert{muestra de una población} es un conjunto de variables
 aleatorias independientes (\(X_{1}...X_{n}\)).
@@ -175,7 +175,7 @@ variable aleatoria (que es una suma de variables aleatorias)
 
 
 
-\begin{frame}[label={sec:org01bdd31}]{Media y varianza de la media muestral}
+\begin{frame}[label={sec:orgb79179c}]{Media y varianza de la media muestral}
 Sea una población cuya media es \(\mu\) y su varianza es \(\sigma^{2}\):
 
 \begin{itemize}
@@ -201,7 +201,7 @@ Por tanto, una forma de \alert{reducir la incertidumbre} es realizar la
 
 
 
-\begin{frame}[label={sec:org0998b66}]{Mediana y cuartiles}
+\begin{frame}[label={sec:orgd25f928}]{Mediana y cuartiles}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -225,23 +225,23 @@ una \alert{medida de la dispersión} de la variable.
 \end{frame}
 
 \section{Gráficos estadísticos}
-\label{sec:orgb15c4a6}
+\label{sec:org90610a4}
 
 
-\begin{frame}[label={sec:orga6ba832}]{Función de Densidad de Probabilidad}
+\begin{frame}[label={sec:orgdd805aa}]{Función de Densidad de Probabilidad}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/FuncionDensidadProbabilidad.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org9c8bf09}]{Histograma}
+\begin{frame}[label={sec:org843828f}]{Histograma}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/Histograma.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgbc984d9}]{Gráficos boxplot}
+\begin{frame}[label={sec:org14eb7e4}]{Gráficos boxplot}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -260,23 +260,23 @@ una \alert{medida de la dispersión} de la variable.
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgc96a3f9}]{Gráficos de dispersión}
+\begin{frame}[label={sec:orgbf3bd7f}]{Gráficos de dispersión}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/GraficoDispersion.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org4913886}]{Matrices de gráficos de dispersión}
+\begin{frame}[label={sec:orgd3ccf0b}]{Matrices de gráficos de dispersión}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/Splom.png}
 \end{center}
 \end{frame}
 
 \section{Gráficos Fotovoltaicos}
-\label{sec:org5fc9725}
+\label{sec:orge00dd86}
 
-\begin{frame}[label={sec:org305351d}]{Inventario\footnote{Más ejemplos en el informe \guillemotleft{}\href{https://iea-pvps.org/key-topics/analytical-monitoring-of-pv-systems-final/}{Analytical Monitoring of Grid-connected Photovoltaic Systems}\guillemotright{} de la Task 13 del IEA-PVPS.}}
+\begin{frame}[label={sec:orga8c00e3}]{Inventario\footnote{Más ejemplos en el informe \guillemotleft{}\href{https://iea-pvps.org/key-topics/analytical-monitoring-of-pv-systems-final/}{Analytical Monitoring of Grid-connected Photovoltaic Systems}\guillemotright{} de la Task 13 del IEA-PVPS.}}
 \begin{itemize}
 \item \(Y_f \sim Y_r\) 
 
@@ -300,7 +300,7 @@ Detección de problemas en el MPPT, limitación del inversor, diodos de bypass.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge252cec}]{\(Y_f \sim Y_r\)}
+\begin{frame}[label={sec:org90d143c}]{\(Y_f \sim Y_r\)}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 \begin{itemize}
@@ -318,13 +318,13 @@ Detección de problemas en el MPPT, limitación del inversor, diodos de bypass.
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org9c8f6e2}]{Error de funcionamiento \(Y_f \sim Y_r\)}
+\begin{frame}[label={sec:org90baebc}]{Error de funcionamiento \(Y_f \sim Y_r\)}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ErrorYf.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org0c94095}]{\(Y_a \sim Y_r\)}
+\begin{frame}[label={sec:orgaf9ecb1}]{\(Y_a \sim Y_r\)}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 \begin{itemize}
@@ -342,14 +342,14 @@ Detección de problemas en el MPPT, limitación del inversor, diodos de bypass.
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org26dce0c}]{Error de funcionamiento \(Y_a \sim Y_r\)}
+\begin{frame}[label={sec:orgc9123ac}]{Error de funcionamiento \(Y_a \sim Y_r\)}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ErrorMonitorizacion.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgfbedb63}]{\(pr \sim T_c\)}
+\begin{frame}[label={sec:orgbde23dd}]{\(pr \sim T_c\)}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 \begin{itemize}
@@ -367,7 +367,7 @@ Detección de problemas en el MPPT, limitación del inversor, diodos de bypass.
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org6117dae}]{\(V_g \sim T_c\)}
+\begin{frame}[label={sec:org2df4ebc}]{\(V_g \sim T_c\)}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 \begin{itemize}
@@ -385,16 +385,16 @@ Detección de problemas en el MPPT, limitación del inversor, diodos de bypass.
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org24ca23e}]{Error de funcionamiento \(V_g \sim T_c\)}
+\begin{frame}[label={sec:org554f8b3}]{Error de funcionamiento \(V_g \sim T_c\)}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ErrorVgTc.pdf}
 \end{center}
 \end{frame}
 
 \section{Comparación entre Datos y Estimación}
-\label{sec:orgd4151dd}
+\label{sec:org9351dbd}
 
-\begin{frame}[label={sec:orgfb93a04}]{Desviación entre modelo y observación}
+\begin{frame}[label={sec:orgb0667d0}]{Desviación entre modelo y observación}
 \begin{itemize}
 \item Sea \(O\) el conjunto de observaciones (medidas) de una variable aleatoria.
 \end{itemize}
@@ -419,7 +419,7 @@ Detección de problemas en el MPPT, limitación del inversor, diodos de bypass.
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org43a2dc3}]{Exactitud (\emph{bias}) y Precisión (\emph{variance})}
+\begin{frame}[label={sec:org59f2a3d}]{Exactitud (\emph{bias}) y Precisión (\emph{variance})}
 \begin{center}
 \includegraphics[height=0.8\textheight]{../figs/bias-variance.png}
 \end{center}
@@ -427,7 +427,7 @@ Detección de problemas en el MPPT, limitación del inversor, diodos de bypass.
 \url{http://scott.fortmann-roe.com/docs/BiasVariance.html}
 \end{frame}
 
-\begin{frame}[label={sec:orgdec4dc1}]{Estimadores frecuentes: MBD y RMSD}
+\begin{frame}[label={sec:org1a5a35b}]{Estimadores frecuentes: MBD y RMSD}
 \begin{itemize}
 \item Mean Bias Difference (MBD), diferencia media (indica si el modelo sobreestima o subestima):
 \end{itemize}
@@ -443,7 +443,7 @@ RMSD = \left(\frac{1}{n} \sum_{i=1}^n d_i^2 \right)^{1/2} =  \left( \frac{1}{n} 
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org4d74768}]{Estimadores frecuentes: MBE y RMSD}
+\begin{frame}[label={sec:org0fc8b5a}]{Estimadores frecuentes: MBE y RMSD}
 El RMSD agrega información del promedio y la varianza de la
   diferencia:
 \[
@@ -457,7 +457,7 @@ donde la varianza de la diferencia (unbiased RMSD) se calcula:
 \end{frame}
 
 
-\begin{frame}[label={sec:org5eb0de7}]{Otros estimadores: MAD}
+\begin{frame}[label={sec:org58e28be}]{Otros estimadores: MAD}
 \begin{itemize}
 \item Mean Absolute Deviation (MAD):
 \end{itemize}
@@ -475,7 +475,7 @@ MAD \leq RMSD \leq n^{1/2} MAD
 \]
 \end{frame}
 
-\begin{frame}[label={sec:orgebf4c8b}]{Correlación}
+\begin{frame}[label={sec:org08c60d9}]{Correlación}
 El coeficiente de correlación entre dos conjuntos de datos es una
 medida numérica de la relación \alert{lineal} entre los dos conjuntos (si la
 relación no es lineal, este coeficiente no sirve):
@@ -496,57 +496,10 @@ r = \frac{1}{n-1} \cdot \sum_{i=1}^{n} \left( \frac{o_{i}-\overline{\mathbf{O}}}
 \end{frame}
 
 
-\begin{frame}[label={sec:orge00ad08}]{Target Diagram\footnote{\url{https://doi.org/10.1016/j.jmarsys.2008.05.014}}}
-\begin{itemize}
-\item Emplea la relación entre \(RMSD\), \(\sigma^2_{\mathbf{D}}\), y \(\overline{\mathbf{D}}\), normalizadas con \(\sigma_{\mathbf{O}}\):
-\end{itemize}
-  \[
-  RMSD' = RMSD / \sigma_{\mathbf{O}}
-  \]
-\[
-  \sigma'_{\mathbf{D}} = \sigma_{\mathbf{D}} / \sigma_{\mathbf{O}} 
-\]
-\[
-\overline{\mathbf{D}}' = \overline{\mathbf{D}} / \sigma_{\mathbf{O}}
-\]
-\[
-RMSD'^2= \sigma'^2_{\mathbf{D}} + \overline{\mathbf{D}}'^2
-\]
-
-\begin{itemize}
-\item Incorpora el signo de la diferencia entre desviaciones estándar del modelo y las observaciones.
-\end{itemize}
-\[
-sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
-\]
-
-
-\nocite{Jolliff.Kindle.ea2009}
-\end{frame}
-
-\begin{frame}[label={sec:orgde620d3}]{Target Diagram}
-\begin{columns}
-\begin{column}{0.4\columnwidth}
-\begin{itemize}
-\item \(\sigma'_{\mathbf{D}}\) (con signo): Eje horizontal
-\item \(\overline{\mathbf{D}}'\): Eje vertical
-\item \(RMSD'^2\): Distancia al origen
-\end{itemize}
-\end{column}
-
-\begin{column}{0.6\columnwidth}
-\begin{center}
-\includegraphics[height=0.9\textheight]{../figs/TargetDiagram.pdf}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-
-
 \section{Coherencia Estadística}
-\label{sec:org0964a6c}
+\label{sec:org4378f75}
 
-\begin{frame}[label={sec:org5e3e5d4}]{Planteamiento}
+\begin{frame}[label={sec:orgebcf1b6}]{Planteamiento}
 \begin{itemize}
 \item En un sistema compuesto por diferentes \alert{unidades idénticas}, el funcionamiento de todas ellas debe ser el mismo.
 \item Los \alert{elementos reales} presentan \alert{diferencias} (tolerancia de potencia, pérdidas de dispersión, suciedad), de forma que el comportamiento de cada unidad se desviará del comportamiento promedio.
@@ -554,7 +507,7 @@ sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
 \item Un análisis estadístico del funcionamiento del conjunto puede \alert{identificar una unidad defectuosa} como aquella que se aparta significativamente del comportamiento promedio.
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orge2a803f}]{Coherencia estadística}
+\begin{frame}[label={sec:org7e768f5}]{Coherencia estadística}
 \begin{itemize}
 \item Una medida puede ser etiquetada como \emph{outlier} si es poco probable que pertenezca a la misma distribución que el conjunto.
 \item En estadística hay métodos diversos para realizar este análisis:
@@ -568,7 +521,7 @@ sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
 \end{frame}
 
 
-\begin{frame}[label={sec:org456a4c5}]{Método de Chauvenet}
+\begin{frame}[label={sec:orgb6e2511}]{Método de Chauvenet}
 Una medida es un \emph{outlier} si la probabilidad de obtener su desviación
 respecto de la media es inferior al inverso de 2 veces el número de
 elementos en el conjunto.
@@ -577,7 +530,7 @@ elementos en el conjunto.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgf510d1b}]{Método de Chauvenet\footnote{\url{https://doi.org/10.1016/j.solener.2009.08.008}}}
+\begin{frame}[label={sec:org731c1e5}]{Método de Chauvenet\footnote{\url{https://doi.org/10.1016/j.solener.2009.08.008}}}
 \begin{enumerate}
 \item Supongamos un SFV compuesto por \(N\) unidades idénticas.
 \item Sea \(Y_{f,i}\) la medida de \alert{productividad diaria} de una de esas unidades.
@@ -594,7 +547,7 @@ que hay dos colas.
 \end{frame}
 
 
-\begin{frame}[label={sec:orgbecf038}]{Método de Chauvenet}
+\begin{frame}[label={sec:org0614079}]{Método de Chauvenet}
 \begin{itemize}
 \item Por ejemplo, para un sistema de 10 unidades, la probabilidad es \(1/20\).
 
@@ -625,7 +578,52 @@ que hay dos colas.
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org06db2ae}]{Métodos gráficos}
+\begin{frame}[label={sec:org9e0d24e}]{Métodos gráficos: Target Diagram\footnote{\url{https://doi.org/10.1016/j.jmarsys.2008.05.014}}}
+\begin{itemize}
+\item Emplea la relación entre \(RMSD\), \(\sigma^2_{\mathbf{D}}\), y \(\overline{\mathbf{D}}\), normalizadas con \(\sigma_{\mathbf{O}}\):
+\end{itemize}
+  \[
+  RMSD' = RMSD / \sigma_{\mathbf{O}}
+  \]
+\[
+  \sigma'_{\mathbf{D}} = \sigma_{\mathbf{D}} / \sigma_{\mathbf{O}} 
+\]
+\[
+\overline{\mathbf{D}}' = \overline{\mathbf{D}} / \sigma_{\mathbf{O}}
+\]
+\[
+RMSD'^2= \sigma'^2_{\mathbf{D}} + \overline{\mathbf{D}}'^2
+\]
+
+\begin{itemize}
+\item Incorpora el signo de la diferencia entre desviaciones estándar del modelo y las observaciones.
+\end{itemize}
+\[
+sign_{\sigma} =  sign(\sigma_{\mathbf{M}} - \sigma_{\mathbf{O}} )
+\]
+\end{frame}
+
+
+\begin{frame}[label={sec:orgbf49654}]{Métodos gráficos: Target Diagram}
+\begin{columns}
+\begin{column}{0.4\columnwidth}
+\begin{itemize}
+\item \(\sigma'_{\mathbf{D}}\) (con signo): Eje horizontal
+\item \(\overline{\mathbf{D}}'\): Eje vertical
+\item \(RMSD'^2\): Distancia al origen
+\end{itemize}
+\end{column}
+
+\begin{column}{0.6\columnwidth}
+\begin{center}
+\includegraphics[height=0.9\textheight]{../figs/TargetDiagram.pdf}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+\begin{frame}[label={sec:org9eec429}]{Ejemplo de uso de Target Diagram}
 \begin{itemize}
 \item Sea \(Y_{f,i}(t)\) la serie temporal de la productividad diaria de \alert{una unidad} del SFV.
 \item Sea \(\widetilde{Y}_{f}(t)\) la serie temporal de la \alert{mediana} de la productividad diaria del SFV \alert{completo}.
