--- a/diapos/IntroCentralesFV.tex
+++ b/diapos/IntroCentralesFV.tex
@@ -1,4 +1,4 @@
-% Created 2024-01-27 sáb 17:09
+% Created 2025-02-01 sáb 11:38
 % Intended LaTeX compiler: pdflatex
 \documentclass[aspectratio=169, usenames,svgnames,dvipsnames]{beamer}
 \usepackage[utf8]{inputenc}
@@ -55,21 +55,19 @@
  pdftitle={Introducción a las Centrales Fotovoltaicas},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 29.1 (Org mode 9.6.11)}, 
+ pdfcreator={Emacs 29.4 (Org mode 9.7.16)}, 
  pdflang={Spanish}}
 \begin{document}
 
 \maketitle
-
-\begin{frame}[label={sec:orgdae9f28}]{Definición}
+\begin{frame}[label={sec:orgdf0bda6}]{Definición}
 Una central fotovoltaica es un sistema fotovoltaico de gran tamaño (del orden de MW) diseñado para la venta de energía a la red eléctrica.
 
 \begin{center}
 \includegraphics[width=\textwidth]{../figs/carmona_vistaamplia.jpg}
 \end{center}
 \end{frame}
-
-\begin{frame}[label={sec:org539d0c7}]{Características (1)}
+\begin{frame}[label={sec:orgcece931}]{Características (1)}
 \begin{itemize}
 \item Habitualmente se instalan \alert{sobre suelo}, sin estar necesariamente asociadas a un punto de consumo cercano.
 \item Como solución a las limitaciones de suelo disponible, están apareciendo \alert{sistemas flotantes} (embalses).
@@ -80,9 +78,7 @@ Una central fotovoltaica es un sistema fotovoltaico de gran tamaño (del orden d
 \includegraphics[height=0.5\textheight]{../figs/agrovoltaics.jpg}
 \end{center}
 \end{frame}
-
-
-\begin{frame}[label={sec:org9dbd947}]{Características (2)}
+\begin{frame}[label={sec:org587e829}]{Características (2)}
 \begin{itemize}
 \item Se emplean \alert{módulos de gran tamaño} (incluso bifaciales) para reducir los tiempos y costes de instalación.
 \item Pueden utilizar \alert{seguidores} para maximizar la producción.
@@ -92,8 +88,7 @@ Una central fotovoltaica es un sistema fotovoltaico de gran tamaño (del orden d
 \includegraphics[height=0.5\textheight]{../figs/carmona.jpg}
 \end{center}
 \end{frame}
-
-\begin{frame}[label={sec:org9f49608}]{Características (y 3)}
+\begin{frame}[label={sec:org34a859f}]{Características (y 3)}
 \begin{itemize}
 \item La inyección de la energía eléctrica se realiza en \alert{Media Tensión}.
 \item Incorporan \alert{inversores de gran potencia} y centralizados, y centros de transformación BT/MT.
@@ -104,27 +99,23 @@ Una central fotovoltaica es un sistema fotovoltaico de gran tamaño (del orden d
 \includegraphics[height=0.5\textheight]{../figs/1power_station_de_ingeteam_en_la_planta_pv_bon_nome.jpg}
 \end{center}
 \end{frame}
-
-\begin{frame}[label={sec:org5b06b2a}]{Estado del arte (1)}
-Las centrales fotovoltaicas superan los 648 GW\footnote{Las cifras corresponden a finales de 2022, y provienen del informe \guillemotleft{}\href{https://iea-pvps.org/trends\_reports/trends-2023/}{Trends in Photovoltaic Applications 2023}\guillemotright{} de la Task 1 de IEA-PVPS.}  de potencia total instalada a nivel mundial (el 55\% de la potencia fotovoltaica total):
+\begin{frame}[label={sec:orgd92c0dd}]{Estado del arte (1)}
+Las centrales fotovoltaicas superan los 877.5 GW\footnote{Las cifras corresponden a finales de 2023, y provienen del informe \guillemotleft{}\href{https://iea-pvps.org/trends\_reports/trends-in-pv-applications-2024/}{Trends in Photovoltaic Applications 2024}\guillemotright{} de la Task 1 de IEA-PVPS.}  de potencia total instalada a nivel mundial (el 54\% de la potencia fotovoltaica total):
 \begin{itemize}
-\item 254 GW en China,
-\item 90 GW en EEUU,
-\item 67 GW en India,
-\item 34 GW en Japón,
-\item 24 GW en España.
+\item 435.26 GW en China,
+\item 117.25 GW en EEUU,
+\item 76.87 GW en India,
+\item 36.85 GW en Japón,
+\item 30.64 GW en España.
 \end{itemize}
 \end{frame}
-
-
-
-\begin{frame}[label={sec:org1d89d1d}]{Estado del arte (2)}
-En 2022 se instalaron 120 GW  (frente a 92 GW en 2021 y 84 GW in 2020):
+\begin{frame}[label={sec:org09730ba}]{Estado del arte (2)}
+En 2023 se instalaron 269.9 GW  (frente a 120 GW en 2022 y 92 GW en 2021):
 \begin{itemize}
-\item 54 GW en China,
-\item 14 GW en India,
-\item 12,5 GW en EEUU,
-\item 5,5 GW en España.
+\item 180.89 GW en China,
+\item 24.34 GW en EEUU,
+\item 10.03 GW en India,
+\item 6.94 GW en España.
 \end{itemize}
 \end{frame}
 \end{document}
